--- a/css/templatemo-video-catalog.css
+++ b/css/templatemo-video-catalog.css
@@ -209,6 +209,8 @@ img.rright { transform: rotate(90deg) }
 
 .tm-page-title { font-size: 2.5rem; }
 .tm-catalog-item-list { justify-content: space-between; }
+.tm-catalog-item-list-2 {
+padding: 15px; }
 
 .tm-catalog-item {
     max-width: 462px;
